@@ -115,18 +115,18 @@ rWishart <- function(n, df, invScal)
 setMethod("coef", signature(object = "mer"),
 	  function(object, ...)
       {
-	   fef <- data.frame(rbind(fixef(object)), check.names = FALSE)
-	   ref <- ranef(object)
-	   val <- lapply(ref, function(x) fef[rep(1, nrow(x)),,drop = FALSE])
-	   for (i in seq(a = val)) {
-	       refi <- ref[[i]]
-	       row.names(val[[i]]) <- row.names(refi)
-	       nmsi <- colnames(refi)
-	       if (!all(nmsi %in% names(fef)))
-		   stop("unable to align random and fixed effects")
-	       for (nm in nmsi) val[[i]][[nm]] <- val[[i]][[nm]] + refi[,nm]
-	   }
-	   new("coef.lmer", val)
+          fef <- data.frame(rbind(fixef(object)), check.names = FALSE)
+          ref <- ranef(object)
+          val <- lapply(ref, function(x) fef[rep(1, nrow(x)),,drop = FALSE])
+          for (i in seq(a = val)) {
+              refi <- ref[[i]]
+              row.names(val[[i]]) <- row.names(refi)
+              nmsi <- colnames(refi)
+              if (!all(nmsi %in% names(fef)))
+                  stop("unable to align random and fixed effects")
+              for (nm in nmsi) val[[i]][[nm]] <- val[[i]][[nm]] + refi[,nm]
+          }
+          new("coef.lmer", val)
        })
 
 setMethod("plot", signature(x = "coef.lmer"),
